include/xprs.h



/***************************************************************************\
 * Object and reference types                                              *
\***************************************************************************/
typedef struct XPRSobject_s *XPRSobject;

typedef struct xo_prob_struct* XPRSprob;

typedef struct xo_NameList* XPRSnamelist;

int XPRS_CC XPRSbasisstability(XPRSprob prob, int typecode, int norm, int ifscaled, double* dval);

int XPRS_CC XPRScalcslacks(XPRSprob prob, const double solution[], double calculatedslacks[]);

int XPRS_CC XPRScalcreducedcosts(XPRSprob prob, const double duals[], const double solution[], double calculateddjs[]);

int XPRS_CC XPRScalcobjective(XPRSprob prob, const double solution[], double* objective);

int XPRS_CC XPRSrefinemipsol(XPRSprob prob, int options, const char* _sflags, const double solution[], double refined_solution[], int* refinestatus);

int XPRS_CC XPRScalcsolinfo(XPRSprob prob, const double solution[], const double dual[], int Property, double* Value);

int XPRS_CC XPRSgetnamelist(XPRSprob prob, int _itype, char _sbuff[], int names_len, int* names_len_reqd, int first, int last);

int XPRS_CC XPRSgetnamelistobject(XPRSprob prob, int _itype, XPRSnamelist* r_nl);

int XPRS_CC XPRSlogfilehandler(XPRSobject obj, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode);

int XPRS_CC XPRSgetobjecttypename(XPRSobject obj, const char** sObjectName);

int XPRS_CC XPRSstrongbranchcb(XPRSprob prob, const int nbnds, const int _mindex[], const char _sboundtype[], const double _dbnd[], const int itrlimit, double _dsbobjval[], int _msbstatus[], int (XPRS_CC *sbsolvecb)(XPRSprob prob, void* vContext, int ibnd), void* vContext);

int XPRS_CC XPRSsetcblplog(XPRSprob prob, int (XPRS_CC *f_lplog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcblplog(XPRSprob prob, int (XPRS_CC **f_lplog)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcblplog(XPRSprob prob, int (XPRS_CC *f_lplog)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecblplog(XPRSprob prob, int (XPRS_CC *f_lplog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbgloballog(XPRSprob prob, int (XPRS_CC *f_globallog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbgloballog(XPRSprob prob, int (XPRS_CC **f_globallog)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbgloballog(XPRSprob prob, int (XPRS_CC *f_globallog)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbgloballog(XPRSprob prob, int (XPRS_CC *f_globallog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbcutlog(XPRSprob prob, int (XPRS_CC *f_cutlog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbcutlog(XPRSprob prob, int (XPRS_CC **f_cutlog)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbcutlog(XPRSprob prob, int (XPRS_CC *f_cutlog)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbcutlog(XPRSprob prob, int (XPRS_CC *f_cutlog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbbarlog(XPRSprob prob, int (XPRS_CC *f_barlog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbbarlog(XPRSprob prob, int (XPRS_CC **f_barlog)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbbarlog(XPRSprob prob, int (XPRS_CC *f_barlog)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbbarlog(XPRSprob prob, int (XPRS_CC *f_barlog)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbcutmgr(XPRSprob prob, int (XPRS_CC *f_cutmgr)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbcutmgr(XPRSprob prob, int (XPRS_CC **f_cutmgr)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbcutmgr(XPRSprob prob, int (XPRS_CC *f_cutmgr)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbcutmgr(XPRSprob prob, int (XPRS_CC *f_cutmgr)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbchgnode(XPRSprob prob, void (XPRS_CC *f_chgnode)(XPRSprob prob, void* vContext, int* nodnum), void* p);

int XPRS_CC XPRSgetcbchgnode(XPRSprob prob, void (XPRS_CC **f_chgnode)(XPRSprob prob, void* vContext, int* nodnum), void** p);

int XPRS_CC XPRSaddcbchgnode(XPRSprob prob, void (XPRS_CC *f_chgnode)(XPRSprob prob, void* vContext, int* nodnum), void* p, int priority);

int XPRS_CC XPRSremovecbchgnode(XPRSprob prob, void (XPRS_CC *f_chgnode)(XPRSprob prob, void* vContext, int* nodnum), void* p);

int XPRS_CC XPRSsetcboptnode(XPRSprob prob, void (XPRS_CC *f_optnode)(XPRSprob prob, void* vContext, int* feas), void* p);

int XPRS_CC XPRSgetcboptnode(XPRSprob prob, void (XPRS_CC **f_optnode)(XPRSprob prob, void* vContext, int* feas), void** p);

int XPRS_CC XPRSaddcboptnode(XPRSprob prob, void (XPRS_CC *f_optnode)(XPRSprob prob, void* vContext, int* feas), void* p, int priority);

int XPRS_CC XPRSremovecboptnode(XPRSprob prob, void (XPRS_CC *f_optnode)(XPRSprob prob, void* vContext, int* feas), void* p);

int XPRS_CC XPRSsetcbprenode(XPRSprob prob, void (XPRS_CC *f_prenode)(XPRSprob prob, void* vContext, int* nodinfeas), void* p);

int XPRS_CC XPRSgetcbprenode(XPRSprob prob, void (XPRS_CC **f_prenode)(XPRSprob prob, void* vContext, int* nodinfeas), void** p);

int XPRS_CC XPRSaddcbprenode(XPRSprob prob, void (XPRS_CC *f_prenode)(XPRSprob prob, void* vContext, int* nodinfeas), void* p, int priority);

int XPRS_CC XPRSremovecbprenode(XPRSprob prob, void (XPRS_CC *f_prenode)(XPRSprob prob, void* vContext, int* nodinfeas), void* p);

int XPRS_CC XPRSsetcbinfnode(XPRSprob prob, void (XPRS_CC *f_infnode)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbinfnode(XPRSprob prob, void (XPRS_CC **f_infnode)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbinfnode(XPRSprob prob, void (XPRS_CC *f_infnode)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbinfnode(XPRSprob prob, void (XPRS_CC *f_infnode)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbnodecutoff(XPRSprob prob, void (XPRS_CC *f_nodecutoff)(XPRSprob prob, void* vContext, int nodnum), void* p);

int XPRS_CC XPRSgetcbnodecutoff(XPRSprob prob, void (XPRS_CC **f_nodecutoff)(XPRSprob prob, void* vContext, int nodnum), void** p);

int XPRS_CC XPRSaddcbnodecutoff(XPRSprob prob, void (XPRS_CC *f_nodecutoff)(XPRSprob prob, void* vContext, int nodnum), void* p, int priority);

int XPRS_CC XPRSremovecbnodecutoff(XPRSprob prob, void (XPRS_CC *f_nodecutoff)(XPRSprob prob, void* vContext, int nodnum), void* p);

int XPRS_CC XPRSsetcbintsol(XPRSprob prob, void (XPRS_CC *f_intsol)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbintsol(XPRSprob prob, void (XPRS_CC **f_intsol)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbintsol(XPRSprob prob, void (XPRS_CC *f_intsol)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbintsol(XPRSprob prob, void (XPRS_CC *f_intsol)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbpreintsol(XPRSprob prob, void (XPRS_CC *f_preintsol)(XPRSprob prob, void* vContext, int isheuristic, int* ifreject, double* cutoff), void* p);

int XPRS_CC XPRSgetcbpreintsol(XPRSprob prob, void (XPRS_CC **f_preintsol)(XPRSprob prob, void* vContext, int isheuristic, int* ifreject, double* cutoff), void** p);

int XPRS_CC XPRSaddcbpreintsol(XPRSprob prob, void (XPRS_CC *f_preintsol)(XPRSprob prob, void* vContext, int isheuristic, int* ifreject, double* cutoff), void* p, int priority);

int XPRS_CC XPRSremovecbpreintsol(XPRSprob prob, void (XPRS_CC *f_preintsol)(XPRSprob prob, void* vContext, int isheuristic, int* ifreject, double* cutoff), void* p);

int XPRS_CC XPRSsetcbchgbranch(XPRSprob prob, void (XPRS_CC *f_chgbranch)(XPRSprob prob, void* vContext, int* entity, int* up, double* estdeg), void* p);

int XPRS_CC XPRSgetcbchgbranch(XPRSprob prob, void (XPRS_CC **f_chgbranch)(XPRSprob prob, void* vContext, int* entity, int* up, double* estdeg), void** p);

int XPRS_CC XPRSaddcbchgbranch(XPRSprob prob, void (XPRS_CC *f_chgbranch)(XPRSprob prob, void* vContext, int* entity, int* up, double* estdeg), void* p, int priority);

int XPRS_CC XPRSremovecbchgbranch(XPRSprob prob, void (XPRS_CC *f_chgbranch)(XPRSprob prob, void* vContext, int* entity, int* up, double* estdeg), void* p);

int XPRS_CC XPRSsetcbestimate(XPRSprob prob, int (XPRS_CC *f_estimate)(XPRSprob prob, void* vContext, int* iglsel, int* iprio, double* degbest, double* degworst, double* curval, int* ifupx, int* nglinf, double* degsum, int* nbr), void* p);

int XPRS_CC XPRSgetcbestimate(XPRSprob prob, int (XPRS_CC **f_estimate)(XPRSprob prob, void* vContext, int* iglsel, int* iprio, double* degbest, double* degworst, double* curval, int* ifupx, int* nglinf, double* degsum, int* nbr), void** p);

int XPRS_CC XPRSaddcbestimate(XPRSprob prob, int (XPRS_CC *f_estimate)(XPRSprob prob, void* vContext, int* iglsel, int* iprio, double* degbest, double* degworst, double* curval, int* ifupx, int* nglinf, double* degsum, int* nbr), void* p, int priority);

int XPRS_CC XPRSremovecbestimate(XPRSprob prob, int (XPRS_CC *f_estimate)(XPRSprob prob, void* vContext, int* iglsel, int* iprio, double* degbest, double* degworst, double* curval, int* ifupx, int* nglinf, double* degsum, int* nbr), void* p);

int XPRS_CC XPRSsetcbsepnode(XPRSprob prob, int (XPRS_CC *f_sepnode)(XPRSprob prob, void* vContext, int ibr, int iglsel, int ifup, double curval), void* p);

int XPRS_CC XPRSgetcbsepnode(XPRSprob prob, int (XPRS_CC **f_sepnode)(XPRSprob prob, void* vContext, int ibr, int iglsel, int ifup, double curval), void** p);

int XPRS_CC XPRSaddcbsepnode(XPRSprob prob, int (XPRS_CC *f_sepnode)(XPRSprob prob, void* vContext, int ibr, int iglsel, int ifup, double curval), void* p, int priority);

int XPRS_CC XPRSremovecbsepnode(XPRSprob prob, int (XPRS_CC *f_sepnode)(XPRSprob prob, void* vContext, int ibr, int iglsel, int ifup, double curval), void* p);

int XPRS_CC XPRSsetcbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p);

int XPRS_CC XPRSgetcbmessage(XPRSprob prob, void (XPRS_CC **f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void** p);

int XPRS_CC XPRSaddcbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p, int priority);

int XPRS_CC XPRSremovecbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p);

int XPRS_CC XPRSsetcbmipthread(XPRSprob prob, void (XPRS_CC *f_mipthread)(XPRSprob master_prob, void* vContext, XPRSprob prob), void* p);

int XPRS_CC XPRSgetcbmipthread(XPRSprob prob, void (XPRS_CC **f_mipthread)(XPRSprob master_prob, void* vContext, XPRSprob prob), void** p);

int XPRS_CC XPRSaddcbmipthread(XPRSprob prob, void (XPRS_CC *f_mipthread)(XPRSprob master_prob, void* vContext, XPRSprob prob), void* p, int priority);

int XPRS_CC XPRSremovecbmipthread(XPRSprob prob, void (XPRS_CC *f_mipthread)(XPRSprob master_prob, void* vContext, XPRSprob prob), void* p);

int XPRS_CC XPRSsetcbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbdestroymt(XPRSprob prob, void (XPRS_CC **f_destroymt)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p);