include/xprs.bas

Declare PtrSafe Function XPRSbasisstability Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal typecode As Long, ByVal norm As Long, ByVal ifscaled As Long, ByRef dval As Double) As Long
Declare PtrSafe Function XPRScalcslacks Lib "XPRS.DLL" (ByVal prob As LongPtr, solution As Double, calculatedslacks As Double) As Long
Declare PtrSafe Function XPRScalcreducedcosts Lib "XPRS.DLL" (ByVal prob As LongPtr, duals As Double, solution As Double, calculateddjs As Double) As Long
Declare PtrSafe Function XPRScalcobjective Lib "XPRS.DLL" (ByVal prob As LongPtr, solution As Double, ByRef objective As Double) As Long
Declare PtrSafe Function XPRSrefinemipsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal options As Long, ByVal sflags As String, solution As Double, refined_solution As Double, ByRef refinestatus As Long) As Long
Declare PtrSafe Function XPRScalcsolinfo Lib "XPRS.DLL" (ByVal prob As LongPtr, solution As Double, dual As Double, ByVal Property As Long, ByRef Value As Double) As Long
Declare PtrSafe Function XPRSgetnamelist Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, sbuff As Byte, ByVal names_len As Long, ByRef names_len_reqd As Long, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetnamelistobject Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByRef r_nl As LongPtr) As Long
Declare PtrSafe Function XPRSlogfilehandler Lib "XPRS.DLL" (ByVal obj As LongPtr, ByVal vUserContext As String, ByVal vSystemThreadId As LongPtr, ByVal sMsg As String, ByVal iMsgType As Long, ByVal iMsgCode As Long) As Long
Private Declare PtrSafe Function XPRSgetobjecttypename_C Lib "XPRS.DLL" Alias "XPRSgetobjecttypename" (ByVal obj As LongPtr, ByRef sObjectName As Long) As Long
Declare PtrSafe Function XPRSstrongbranchcb Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nbnds As Long, mindex As Long, sboundtype As Byte, dbnd As Double, ByVal itrlimit As Long, dsbobjval As Double, msbstatus As Long, ByVal sbsolvecb As LongPtr, ByVal vContext As String) As Long
Declare PtrSafe Function XPRSsetcblplog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_lplog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcblplog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_lplog As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcblplog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_lplog As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecblplog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_lplog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbgloballog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_globallog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbgloballog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_globallog As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbgloballog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_globallog As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbgloballog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_globallog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbcutlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutlog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbcutlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_cutlog As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbcutlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutlog As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbcutlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutlog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbbarlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_barlog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbbarlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_barlog As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbbarlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_barlog As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbbarlog Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_barlog As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbcutmgr Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutmgr As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbcutmgr Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_cutmgr As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbcutmgr Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutmgr As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbcutmgr Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_cutmgr As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbchgnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbchgnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_chgnode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbchgnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgnode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbchgnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcboptnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_optnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcboptnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_optnode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcboptnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_optnode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecboptnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_optnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbprenode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_prenode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbprenode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_prenode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbprenode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_prenode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbprenode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_prenode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbinfnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_infnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbinfnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_infnode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbinfnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_infnode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbinfnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_infnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbnodecutoff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_nodecutoff As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbnodecutoff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_nodecutoff As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbnodecutoff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_nodecutoff As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbnodecutoff Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_nodecutoff As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_intsol As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_intsol As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_intsol As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_intsol As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbpreintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_preintsol As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbpreintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_preintsol As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbpreintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_preintsol As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbpreintsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_preintsol As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbchgbranch Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranch As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbchgbranch Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_chgbranch As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbchgbranch Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranch As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbchgbranch Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranch As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbestimate Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_estimate As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbestimate Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_estimate As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbestimate Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_estimate As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbestimate Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_estimate As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbsepnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_sepnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbsepnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_sepnode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbsepnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_sepnode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbsepnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_sepnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbmessage Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_message As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbmessage Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_message As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbmessage Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_message As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbmessage Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_message As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbmipthread Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_mipthread As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbmipthread Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_mipthread As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbmipthread Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_mipthread As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbmipthread Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_mipthread As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbdestroymt Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_destroymt As LongPtr, ByVal p As String) As Long
